Fix laggy scroll on some devices (caused by overflow-x hidden)

--- a/src/components/Views/ChatMessages.styl
+++ b/src/components/Views/ChatMessages.styl
@@ -109,6 +109,7 @@
       border-radius $border-radius
       margin-top -7px !important
       overflow-x hidden
+      transform translate3d(0px, 0px, 0px)
 
     .typing
       padding 20px 20px 0
